# crowdfunding-application

./: .env.example  CONTRIBUTING.md  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
backend/: Anchor.toml  package.json
backend/programs/crowdfunding/: Cargo.toml
backend/tests/: crowdfunding.ts
backend/utils/: airdrop.ts  delay.ts  timestamp.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/[dashboard]/campaigns/: campaign-list.tsx
src/app/[dashboard]/campaigns/[pda]/: campaign.tsx  page.tsx
src/app/campaigns/: campaign-list.tsx
src/components/: ClientComponent.tsx  error-boundary.tsx
src/components/admin-panel/: admin-panel-layout.tsx  breadcrumb.tsx  footer.tsx  menu.tsx  navbar.tsx  select-network.tsx  sheet-menu.tsx  sidebar.tsx
src/components/admin-panel/settings/: page.tsx
src/components/analytics/: page.tsx
src/components/campaigns/: card-campaign.tsx  donation-modal.tsx
src/components/wallets/: WalletConnectButton.tsx
src/context/: session-context.tsx
src/hooks/: use-store.ts
src/lib/: get-campaign-data.tsx  menu-list.ts  utils.ts
